unpackaged/main/default/objects/MyObject__c/fields/How_many_woodchucks__c.field-meta.xml
<CustomField>
    <fullName>How_many_woodchucks__c</fullName>
    <label>How many woodchucks?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>