unpackaged/main/default/objects/MyObject__c/fields/Hungry__c.field-meta.xml
<CustomField>
    <fullName>Hungry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hungry?</label>
    <type>Checkbox</type>
</CustomField>