unpackaged/main/default/objects/MyObject__c/fields/TestField__c.field-meta.xml
<CustomField>
    <fullName>TestField__c</fullName>
    <label>TextField</label>
    <length>100</length>
    <type>Text</type>
</CustomField>